--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <center>
 
 <h1>Computer Project Work Images</h1>
+
+</center>
+
+<center>
+
+<h2>Profile</h2>
+
+<h3>Name - Pratik Srisant Toppo</h3>
+
+<h3>Class - 8C</h3>
+
+<h3>Roll.No - 42</h3>
 </center>
 
 <center>
